envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 3001

overload_manager:
  refresh_interval:
    seconds: 0
    nanos: 250000000
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 5368709120
  actions:
    - name: "envoy.overload_actions.disable_http_keepalive"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.98
    - name: "envoy.overload_actions.stop_accepting_requests"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.99


cluster_manager:
  outlier_detection:
    event_log_path: "/Users/amir/Documents/Bale/Internship/Broker/logs/access_logs.log"

static_resources:
  listeners:
    - name: broker_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/Users/amir/Documents/Bale/Internship/Broker/logs/access_logs.log"
                      typed_json_format:
                        "@timestamp": "%START_TIME%"
                        client.address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                        client.local.address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                        envoy.route.name: "%ROUTE_NAME%"
                        envoy.upstream.cluster: "%UPSTREAM_CLUSTER%"
                        host.hostname: "%HOSTNAME%"
                        http.request.body.bytes: "%BYTES_RECEIVED%"
                        http.request.duration: "%DURATION%"
                        http.request.headers.accept: "%REQ(ACCEPT)%"
                        http.request.headers.authority: "%REQ(:AUTHORITY)%"
                        http.request.headers.publish-topic: "%REQ(subject)%"
                        http.request.headers.id: "%REQ(X-REQUEST-ID)%"
                        http.request.headers.x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                        http.request.headers.x_forwarded_proto: "%REQ(X-FORWARDED-PROTO)%"
                        http.request.headers.x_b3_traceid: "%REQ(X-B3-TRACEID)%"
                        http.request.headers.x_b3_parentspanid: "%REQ(X-B3-PARENTSPANID)%"
                        http.request.headers.x_b3_spanid: "%REQ(X-B3-SPANID)%"
                        http.request.headers.x_b3_sampled: "%REQ(X-B3-SAMPLED)%"
                        http.request.method: "%REQ(:METHOD)%"
                        http.response.body.bytes: "%BYTES_SENT%"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: namespace.local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/broker.Broker/Publish"
                            grpc: {}
                          request_headers_to_add:
                            - header:
                                key: "publish-topic"
                                value: "%REQ(subject)%"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "hey there"

                http_filters:
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: broker_rate_limiter
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      failure_mode_deny: true
                      rate_limit_service:
                        transport_api_version: V3
                        grpc_service:
                          envoy_grpc:
                            cluster_name: rate-limit
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: message_broker_cluster
    type: static
    lb_policy: round_robin
    http2_protocol_options: {}
    connect_timeout: 1s
    load_assignment:
      cluster_name:  message_broker_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 8080

  - name: rate-limit
    health_checks:
      - timeout: 1s
        interval: 5s
        interval_jitter: 1s
        unhealthy_threshold: 3
        healthy_threshold: 3
        grpc_health_check: {}
        event_log_path: "/Users/amir/Documents/Bale/Internship/Broker/logs/health_logs.log"
        always_log_health_check_failures: true
    outlier_detection:
      split_external_local_origin_errors: true
    connect_timeout: 20s
    type: STATIC
    lb_policy: round_robin
    protocol_selection: USE_CONFIGURED_PROTOCOL
    http2_protocol_options: {
      "hpack_table_size": 4294967295,
      "max_concurrent_streams": 2147483647,
      "initial_stream_window_size": 2147483647,
      "max_outbound_frames": 100000,
      "max_outbound_control_frames": 100000,
      "max_consecutive_inbound_frames_with_empty_payload": 10,
    }
    load_assignment:
      cluster_name: rate-limit
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 8081
